k8s/testing/knative-service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  annotations:
    pod-security.kubernetes.io/enforcement: privileged
    pod-security.kubernetes.io/warn: privileged
    pod-security.kubernetes.io/audit: privileged
---
# Get URL by running: `kn route list -n dev`
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: knative-webapp-service
  namespace: dev
  labels:
    app: knative-webapp
spec:
  template:
    metadata:
      labels:
        app: knative-webapp
    spec:
      containers:
        - image: nginxinc/nginx-unprivileged:1.21-alpine
          ports:
            - containerPort: 8080
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 101
            runAsGroup: 101
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
